Fix: Architecture sync, Marzban API update (VLESS flow), and Admin panel fix

--- a/example.env
+++ b/example.env
@@ -1,17 +1,22 @@
-# Telegram
-BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
+# --- TELEGRAM BOT ---
+# Токен от @BotFather
+BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrSTUvwxyz
+
+# ID администратора (число), которому приходят чеки
 ADMIN_ID=123456789
 
-# Marzban
-MARZBAN_HOST=https://127.0.0.1:8000
-MARZBAN_USERNAME=admin
-MARZBAN_PASSWORD=admin_password
-INBOUND_TAG=VLESS TCP REALITY
-# Flow для Reality (обычно xtls-rprx-vision или пусто, если none)
-VLESS_FLOW=xtls-rprx-vision
-
-# Database
+# --- DATABASE ---
+# По умолчанию SQLite. Файл будет создан в папке data/
 DATABASE_URL=sqlite+aiosqlite:///./data/bot.db
 
-# Payment
-PAYMENT_INFO="Перевод на карту: 0000 0000 0000 0000"
+# --- MARZBAN API ---
+# Адрес вашей панели (с http/https)
+MARZBAN_URL=https://your-vpn-panel.com:8000
+# Логин администратора (sudo)
+MARZBAN_USERNAME=admin
+# Пароль администратора
+MARZBAN_PASSWORD=secret_password
+
+# --- TEXTS ---
+# Текст с реквизитами для оплаты (поддерживает \n для переноса строк)
+PAYMENT_INFO=Перевод по номеру: +7 999 000 00 00 (Сбер/Тинькофф)\nПолучатель: Иван И.
